--- a/src/components/styles/Work.css
+++ b/src/components/styles/Work.css
@@ -296,7 +296,6 @@
   .carousel-arrow-left {
     left: -60px;
   }
-
   .carousel-arrow-right {
     right: -60px;
   }
@@ -306,63 +305,56 @@
   .work-section h2 {
     font-size: 50px;
   }
-
   .carousel-details h4 {
     font-size: 22px;
   }
-
   .carousel-number h3 {
     font-size: 45px;
   }
-
   .carousel-content {
-    gap: 40px;
+    gap: 30px;
   }
-
+  .carousel-highlights {
+    flex: 0 0 220px;
+  }
   .carousel-arrow-left {
-    left: 10px;
+    left: 0px;
   }
-
   .carousel-arrow-right {
-    right: 10px;
+    right: 0px;
   }
 }
 
-@media only screen and (max-width: 1025px) {
+@media only screen and (max-width: 1100px) {
   .carousel-content {
     flex-direction: column;
-    gap: 30px;
+    gap: 24px;
   }
-
   .carousel-info {
     width: 100%;
   }
-
   .carousel-highlights {
     flex: unset;
     width: 100%;
+    box-sizing: border-box;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 12px;
-    padding: 20px;
+    padding: 16px 20px;
   }
-
-  .carousel-image-wrapper {
-    width: 100%;
-  }
-
   .carousel-arrow {
-    width: 40px;
-    height: 40px;
-    font-size: 18px;
+    width: 36px;
+    height: 36px;
+    font-size: 16px;
   }
-
   .carousel-arrow-left {
-    left: 10px;
+    left: 0px;
   }
-
   .carousel-arrow-right {
-    right: 10px;
+    right: 0px;
+  }
+  .carousel-slide {
+    padding: 60px 0 30px;
   }
 }
 
@@ -370,29 +362,39 @@
   .work-section {
     padding: 50px 0;
   }
-
   .work-section h2 {
     font-size: 40px;
     margin-bottom: 30px;
   }
-
   .carousel-number h3 {
     font-size: 35px;
   }
-
   .carousel-details h4 {
     font-size: 20px;
   }
-
-  .carousel-content {
-    gap: 20px;
+  .carousel-description {
+    font-size: 13px;
   }
-
   .carousel-slide {
-    padding: 30px 0;
+    padding: 50px 0 24px;
   }
+}
 
-  .work-image img {
-    max-height: 250px;
+@media only screen and (max-width: 600px) {
+  .work-section h2 {
+    font-size: 32px;
+  }
+  .carousel-number h3 {
+    font-size: 28px;
+  }
+  .carousel-details h4 {
+    font-size: 17px;
+  }
+  .carousel-info {
+    gap: 16px;
+  }
+  .carousel-github {
+    font-size: 12px;
+    padding: 6px 12px;
   }
 }
